--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.5.1",
   "license": "MIT",
   "description": "Calendar scheduler component for VueJs",
+  "homepage": "https://dapd007.github.io/v-calendar-scheduler/",
+  "bugs": "https://github.com/dapd007/v-calendar-scheduler/issues",
   "author": "David Paternina <david@fanxielab.com>",
   "repository": "https://github.com/dapd007/v-calendar-scheduler",
   "main": "index.js",
