--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.1",
   "license": "MIT",
   "description": "Calendar scheduler component for VueJs",
-  "homepage": "https://dapd007.github.io/v-calendar-scheduler/",
+  "homepage": "https://v-calendar.davidpaternina.com/",
   "bugs": "https://github.com/dapd007/v-calendar-scheduler/issues",
   "author": "David Paternina <david@fanxielab.com>",
   "repository": "https://github.com/dapd007/v-calendar-scheduler",
